wwpdb/utils/nmr/cpp_src/CharmmCRDParser.cpp

// Generated from /data/git/py-wwpdb_utils_nmr/wwpdb/utils/tests-nmr/antlr-grammars-v4.10/CharmmCRDParser.g4 by ANTLR 4.13.2


#include "CharmmCRDParserVisitor.h"

#include "CharmmCRDParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CharmmCRDParserStaticData final {
  CharmmCRDParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CharmmCRDParserStaticData(const CharmmCRDParserStaticData&) = delete;
  CharmmCRDParserStaticData(CharmmCRDParserStaticData&&) = delete;
  CharmmCRDParserStaticData& operator=(const CharmmCRDParserStaticData&) = delete;
  CharmmCRDParserStaticData& operator=(CharmmCRDParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag charmmcrdparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<CharmmCRDParserStaticData> charmmcrdparserParserStaticData = nullptr;

void charmmcrdparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (charmmcrdparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(charmmcrdparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CharmmCRDParserStaticData>(
    std::vector<std::string>{
      "charmm_crd", "comment", "coordinates", "atom_coordinate"
    },
    std::vector<std::string>{
      "", "", "", "", "", "'EXT'"
    },
    std::vector<std::string>{
      "", "Integer", "Float", "Double_quote_string", "COMMENT", "Ext", "Simple_name", 
      "SPACE", "CONTINUE", "ENCLOSE_COMMENT", "SECTION_COMMENT", "LINE_COMMENT", 
      "Any_name", "SPACE_CM", "RETURN_CM"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  charmmcrdparserParserStaticData = std::move(staticData);
}

}

CharmmCRDParser::CharmmCRDParser(TokenStream *input) : CharmmCRDParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CharmmCRDParser::CharmmCRDParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CharmmCRDParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *charmmcrdparserParserStaticData->atn, charmmcrdparserParserStaticData->decisionToDFA, charmmcrdparserParserStaticData->sharedContextCache, options);
}

CharmmCRDParser::~CharmmCRDParser() {
  delete _interpreter;
}

const atn::ATN& CharmmCRDParser::getATN() const {
  return *charmmcrdparserParserStaticData->atn;
}

std::string CharmmCRDParser::getGrammarFileName() const {
  return "CharmmCRDParser.g4";
}

const std::vector<std::string>& CharmmCRDParser::getRuleNames() const {
  return charmmcrdparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& CharmmCRDParser::getVocabulary() const {
  return charmmcrdparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CharmmCRDParser::getSerializedATN() const {
  return charmmcrdparserParserStaticData->serializedATN;
}


//----------------- Charmm_crdContext ------------------------------------------------------------------

CharmmCRDParser::Charmm_crdContext::Charmm_crdContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CharmmCRDParser::Charmm_crdContext::EOF() {
  return getToken(CharmmCRDParser::EOF, 0);
}

std::vector<CharmmCRDParser::CommentContext *> CharmmCRDParser::Charmm_crdContext::comment() {
  return getRuleContexts<CharmmCRDParser::CommentContext>();
}

CharmmCRDParser::CommentContext* CharmmCRDParser::Charmm_crdContext::comment(size_t i) {
  return getRuleContext<CharmmCRDParser::CommentContext>(i);
}

std::vector<CharmmCRDParser::CoordinatesContext *> CharmmCRDParser::Charmm_crdContext::coordinates() {
  return getRuleContexts<CharmmCRDParser::CoordinatesContext>();
}

CharmmCRDParser::CoordinatesContext* CharmmCRDParser::Charmm_crdContext::coordinates(size_t i) {
  return getRuleContext<CharmmCRDParser::CoordinatesContext>(i);
}


size_t CharmmCRDParser::Charmm_crdContext::getRuleIndex() const {
  return CharmmCRDParser::RuleCharmm_crd;
}


std::any CharmmCRDParser::Charmm_crdContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CharmmCRDParserVisitor*>(visitor))
    return parserVisitor->visitCharmm_crd(this);
  else
    return visitor->visitChildren(this);
}

CharmmCRDParser::Charmm_crdContext* CharmmCRDParser::charmm_crd() {
  Charmm_crdContext *_localctx = _tracker.createInstance<Charmm_crdContext>(_ctx, getState());
  enterRule(_localctx, 0, CharmmCRDParser::RuleCharmm_crd);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(12);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CharmmCRDParser::Integer

    || _la == CharmmCRDParser::COMMENT) {
      setState(10);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case CharmmCRDParser::COMMENT: {
          setState(8);
          comment();
          break;
        }

        case CharmmCRDParser::Integer: {
          setState(9);
          coordinates();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(14);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(15);
    match(CharmmCRDParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommentContext ------------------------------------------------------------------

CharmmCRDParser::CommentContext::CommentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CharmmCRDParser::CommentContext::COMMENT() {
  return getToken(CharmmCRDParser::COMMENT, 0);
}

tree::TerminalNode* CharmmCRDParser::CommentContext::RETURN_CM() {
  return getToken(CharmmCRDParser::RETURN_CM, 0);
}

tree::TerminalNode* CharmmCRDParser::CommentContext::EOF() {
  return getToken(CharmmCRDParser::EOF, 0);
}

std::vector<tree::TerminalNode *> CharmmCRDParser::CommentContext::Any_name() {
  return getTokens(CharmmCRDParser::Any_name);
}

tree::TerminalNode* CharmmCRDParser::CommentContext::Any_name(size_t i) {
  return getToken(CharmmCRDParser::Any_name, i);
}


size_t CharmmCRDParser::CommentContext::getRuleIndex() const {
  return CharmmCRDParser::RuleComment;
}


std::any CharmmCRDParser::CommentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CharmmCRDParserVisitor*>(visitor))
    return parserVisitor->visitComment(this);
  else
    return visitor->visitChildren(this);
}

CharmmCRDParser::CommentContext* CharmmCRDParser::comment() {
  CommentContext *_localctx = _tracker.createInstance<CommentContext>(_ctx, getState());
  enterRule(_localctx, 2, CharmmCRDParser::RuleComment);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(17);
    match(CharmmCRDParser::COMMENT);
    setState(21);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CharmmCRDParser::Any_name) {
      setState(18);
      match(CharmmCRDParser::Any_name);
      setState(23);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(24);
    _la = _input->LA(1);
    if (!(_la == CharmmCRDParser::EOF

    || _la == CharmmCRDParser::RETURN_CM)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CoordinatesContext ------------------------------------------------------------------

CharmmCRDParser::CoordinatesContext::CoordinatesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CharmmCRDParser::CoordinatesContext::Integer() {
  return getToken(CharmmCRDParser::Integer, 0);
}

tree::TerminalNode* CharmmCRDParser::CoordinatesContext::Ext() {
  return getToken(CharmmCRDParser::Ext, 0);
}

std::vector<CharmmCRDParser::Atom_coordinateContext *> CharmmCRDParser::CoordinatesContext::atom_coordinate() {
  return getRuleContexts<CharmmCRDParser::Atom_coordinateContext>();
}

CharmmCRDParser::Atom_coordinateContext* CharmmCRDParser::CoordinatesContext::atom_coordinate(size_t i) {
  return getRuleContext<CharmmCRDParser::Atom_coordinateContext>(i);
}


size_t CharmmCRDParser::CoordinatesContext::getRuleIndex() const {
  return CharmmCRDParser::RuleCoordinates;
}


std::any CharmmCRDParser::CoordinatesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CharmmCRDParserVisitor*>(visitor))
    return parserVisitor->visitCoordinates(this);
  else
    return visitor->visitChildren(this);
}

CharmmCRDParser::CoordinatesContext* CharmmCRDParser::coordinates() {
  CoordinatesContext *_localctx = _tracker.createInstance<CoordinatesContext>(_ctx, getState());
  enterRule(_localctx, 4, CharmmCRDParser::RuleCoordinates);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(26);
    match(CharmmCRDParser::Integer);
    setState(27);
    match(CharmmCRDParser::Ext);
    setState(29); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(28);
              atom_coordinate();
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(31); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Atom_coordinateContext ------------------------------------------------------------------

CharmmCRDParser::Atom_coordinateContext::Atom_coordinateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> CharmmCRDParser::Atom_coordinateContext::Integer() {
  return getTokens(CharmmCRDParser::Integer);
}

tree::TerminalNode* CharmmCRDParser::Atom_coordinateContext::Integer(size_t i) {
  return getToken(CharmmCRDParser::Integer, i);
}

std::vector<tree::TerminalNode *> CharmmCRDParser::Atom_coordinateContext::Simple_name() {
  return getTokens(CharmmCRDParser::Simple_name);
}

tree::TerminalNode* CharmmCRDParser::Atom_coordinateContext::Simple_name(size_t i) {
  return getToken(CharmmCRDParser::Simple_name, i);
}

std::vector<tree::TerminalNode *> CharmmCRDParser::Atom_coordinateContext::Float() {
  return getTokens(CharmmCRDParser::Float);
}

tree::TerminalNode* CharmmCRDParser::Atom_coordinateContext::Float(size_t i) {
  return getToken(CharmmCRDParser::Float, i);
}


size_t CharmmCRDParser::Atom_coordinateContext::getRuleIndex() const {
  return CharmmCRDParser::RuleAtom_coordinate;
}


std::any CharmmCRDParser::Atom_coordinateContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CharmmCRDParserVisitor*>(visitor))
    return parserVisitor->visitAtom_coordinate(this);
  else
    return visitor->visitChildren(this);
}

CharmmCRDParser::Atom_coordinateContext* CharmmCRDParser::atom_coordinate() {
  Atom_coordinateContext *_localctx = _tracker.createInstance<Atom_coordinateContext>(_ctx, getState());
  enterRule(_localctx, 6, CharmmCRDParser::RuleAtom_coordinate);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(33);
    match(CharmmCRDParser::Integer);
    setState(34);
    match(CharmmCRDParser::Integer);
    setState(35);
    match(CharmmCRDParser::Simple_name);
    setState(36);
    match(CharmmCRDParser::Simple_name);
    setState(37);
    match(CharmmCRDParser::Float);
    setState(38);
    match(CharmmCRDParser::Float);
    setState(39);
    match(CharmmCRDParser::Float);
    setState(40);
    match(CharmmCRDParser::Simple_name);
    setState(41);
    match(CharmmCRDParser::Integer);
    setState(42);
    match(CharmmCRDParser::Float);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

void CharmmCRDParser::initialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  charmmcrdparserParserInitialize();
#else
  ::antlr4::internal::call_once(charmmcrdparserParserOnceFlag, charmmcrdparserParserInitialize);
#endif
}
